--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [metadata]
 name = PyCHAS
 version = 0.0.1
+readme = README.md
+description = Python C/C++ header amalgamation script
 
 [options]
 packages = PyCHAS
