--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,12 @@
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "PyCHAS"
+version = "0.0.1"
+readme = "README.md"
+description = "Python C/C++ header amalgamation script"
+
+[project.scripts]
+chas = "PyCHAS.chas:chas"
