--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = PyCHAS
-version = 0.0.1
+version = 1.0.0
 readme = README.md
 description = Python C/C++ header amalgamation script
 
@@ -9,4 +9,4 @@ packages = PyCHAS
 
 [options.entry_points]
 console_scripts =
-    chas = PyCHAS.chas:entry
+    chas = PyCHAS.chas:main
