--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,34 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "PyCHAS"
-version = "1.0.0"
+version = "1.0.1"
 readme = "README.md"
 description = "Python C/C++ header amalgamation script"
+authors = [
+    { name = "NotOkay", email = "contact@notokay.dev" }
+]
+license = {text = "MIT"}
+requires-python = ">=3.7"
+classifiers = [
+    'Intended Audience :: Developers',
+    'License :: MIT',
+    'Natural Language :: English',
+    'Operating System :: MacOS :: MacOS X',
+    'Operating System :: POSIX',
+    'Operating System :: POSIX :: BSD',
+    'Operating System :: POSIX :: Linux',
+    'Operating System :: Microsoft :: Windows',
+    'Programming Language :: Python',
+    'Programming Langyage :: Python :: 3',
+    'Programming Langyage :: Python :: 3 :: Only',
+    'Programming Langyage :: Python :: 3.7',
+    'Programming Langyage :: Python :: 3.8',
+    'Programming Langyage :: Python :: 3.9',
+    'Programming Langyage :: Python :: 3.10',
+]
+
+[tool.poetry.urls]
+"Source" = "https://github.com/EinKara/PyCHAS/"
 
 [project.scripts]
-chas = "PyCHAS.chas:main"
+pychas = "PyCHAS.pychas:main"
