--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ license = {text = "MIT"}
 requires-python = ">=3.7"
 classifiers = [
     'Intended Audience :: Developers',
-    'License :: MIT',
+    'License :: OSI Approved :: BSD License',
     'Natural Language :: English',
     'Operating System :: MacOS :: MacOS X',
     'Operating System :: POSIX',
@@ -22,12 +22,12 @@ classifiers = [
     'Operating System :: POSIX :: Linux',
     'Operating System :: Microsoft :: Windows',
     'Programming Language :: Python',
-    'Programming Langyage :: Python :: 3',
-    'Programming Langyage :: Python :: 3 :: Only',
-    'Programming Langyage :: Python :: 3.7',
-    'Programming Langyage :: Python :: 3.8',
-    'Programming Langyage :: Python :: 3.9',
-    'Programming Langyage :: Python :: 3.10',
+    'Programming Language :: Python :: 3',
+    'Programming Language :: Python :: 3 :: Only',
+    'Programming Language :: Python :: 3.7',
+    'Programming Language :: Python :: 3.8',
+    'Programming Language :: Python :: 3.9',
+    'Programming Language :: Python :: 3.10',
 ]
 
 [tool.poetry.urls]
