--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = PyCHAS
-version = 1.0.1
+version = 1.0.2
 description = Python C/C++ header amalgamation script
 long_description = Python C/C++ header amalgamation script
 license_file = LICENSE
@@ -8,8 +8,9 @@ readme = README.md
 author = NotOkay
 author_email = contact@notokay.dev
 url = https://notokay.dev/
-#project_urls = 
-#    Source = https://github.com/EinKara/PyCHAS/
+project_urls = 
+    Source = https://github.com/EinKara/PyCHAS/
+    Sponsor = https://github.com/sponsors/EinKara/
 classifiers = 
     Intended Audience :: Developers
     License :: OSI Approved :: BSD License
